# projet_computer_vision

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  color_detection.py  color_detector.py  color_detector_kivy.py  color_detector_optimised.py  colortracking.py  logging.conf  main.py  openCV.py  pyproject.toml  requirement.txt  requirements.txt  text2.py  text_detector.py
.github/workflows/: ci.yml
color_detector/: Color_Identifier.py  Drag_Drop_Window.py  Image_Processor.py  main.py
docs/superpowers/plans/: 2026-05-06-text-detection-refactoring.md
docs/superpowers/specs/: 2026-05-06-text-detection-refactoring-design.md
src/tests/: test_config.py  test_image_processor.py  test_ocr_engine.py  test_settings_manager.py  test_text_detector.py  test_utils.py  test_widgets.py
src/text_detector/: __init__.py  __main__.py  config.py  image_processor.py  ocr_engine.py  settings_manager.py  text_detector.py  widgets.py
src/text_detector/utils/: __init__.py  logging_setup.py  path_helpers.py
text_detector/: text_detector.py
